<resources>
    <string name="app_name">UHFLongerDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="set">Set</string>
    <string name="id">ID</string>
	<string name="barcode">BarCode</string>
	<string name="count">Count</string>
	<string name="barcodeCount">Barcode Count: </string>
	<string name="clear">Clear</string>
	<string name="scan">Scan</string>
	<string name="exit">EXIT</string>
	<string name="exitSystem">Please press back key again, exit!</string>
	<string name="current_">Current:</string>
	<string name="initial">Initial</string>
	<string name="scan_initial">Initial:com0，scan_power</string>
	<string name="_1d_2d">1D/2D</string>
	<string name="_1d_2d_hf_uhf_fingerprint_nfc_psam">1D/2D/HF/UHF/FingerPrint/NFC/PSAM</string>
	<string name="port">Port：</string>
	<string name="power">Power：</string>
	<string name="iso14443a">14443A</string>
<string name="iso15693">15693</string>
<string name="serialport">port：</string>
<string name="buadrate">baudrate：</string>
<string name="open">open</string>
<string name="close">close</string>
	<string name="uid">UID：</string>
	<string name="sector">sector：</string>
	<string name="block">block：</string>
	<string name="password_a">password A</string>
<string name="password_b">password B</string>
	<string name="password">Password：</string>
	<string name="readData">read data(HEX)</string>
	<string name="writeData">write data(HEX)</string>
	<string name="findcard">Find card</string>
	<string name="auth">Auth</string>
	<string name="startArr">start block：</string>
	<string name="blocks">blocks：</string>
	<string name="selectCard">select card</string>
	<string name="findCardCount">find cards：</string>
	<string name="selectCardUID">select UID：</string>
	<string name="singleBlockLen">single block length（byte）：</string>
	<string name="getCardInfo">Read card info</string>
	<string name="selectBlock">select block：</string>
	<string name="current_setting">current serialport：</string>
	<string name="tips_init_serialport_fail">please open serialport in Setting</string>
		<string name="tips_find_card">please find card </string>
		<string name="tips_input_right_data">please enter 8 bytes HEX data</string>
    <string name="read_data">ReadData</string>
    <string name="read_data_button">Read</string>
    <string name="write_data">WriteData</string>
    <string name="write_data_button">Write</string>
    <string name="stop_operate_14443a">StopService</string>
    <string name="initval_wallet_14443a">InitVal</string>
    <string name="add">Add:</string>
    <string name="redu">Reduce:</string>
    <string name="read_block">BlockAmount:</string>
    <string name="block_start_address">FirstBlock:</string>
    <string name="password_type">PW_MODE:</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="wallet_mode">e-wallet:</string>
    <string name="initval">InitBalance:</string>
    <string name="edittext_sector_hint">00~0F</string>
    <string name="add_or_redu_ed">Balance:</string>
    <string name="edittext_wallet_redu">00000001</string>
    <string name="init_password">FFFFFFFFFFFF</string>
    <string name="edittext_wallet_add">00000002</string>
    <string name="show_balance">Balan</string>
    <string name="f_bytes">FourBytes</string>
    <string name="_00000000">00000000</string>
    <string name="security_byte">SecurityBit</string>
    <string name="start_block">FirstBlock:</string>
    <string name="block_amount">BlockNum:</string>
    <string name="card_state_set">CardStatus</string>
    <string name="card_write_mode_set">CardWriteMode</string>
    <string name="card_lock_set">CardLock</string>
    <string name="read_card_information">CardInformation</string>
    <string name="number">Order</string>
    <string name="card_type">CardType</string>
    <string name="times">Times</string>
    <string name="find_card">FindCard</string>
    <string name="stop_find_card">StopFindCard</string>
    <string name="nfc_ul_card">NFC/UL Card</string>
    <string name="id_card">ID Card</string>
	<string name="_card">Card：</string>
	<string name="_write_success">写数据成功</string>
	<string name="wallet_initval_success">\nWallet InitVal Success！</string>
	<string name="_notice">Notice！！！</string>
	<string name="_operation_notice">This operation is irreversible and cannot be changed after lock.</string>
	<string name="_whether_to_cotinue">Whether to continue?</string>
	<string name="_yes">Yes</string>
	<string name="_no">No</string>
	<string name="_block_number">BlockNumber：</string>
	<string name="_afi_">WriteAFI</string>
	<string name="_dsfid">WriteDSFID</string>
	<string name="_select_card">Select Card：</string>
	<string name="_write_out_data">ReadData:</string>
	<string name="_lock">Lock</string>
	<string name="_return">-->Return：</string>
	<string name="_opera_success">\tOperateSuccess\n</string>
	<string name="_opera_fail">\tOperateFail\n</string>
	<string name="_please_input">Please input the hexadecimal data of 4 bytes</string>
	<string name="_read_page">ReadPage，The \t</string>
	<string name="_page">\tPage</string>
	<string name="read_page">ReadPage</string>
	<string name="write_page">WritePage</string>
	<string name="_read_page_data">ReadPage</string>
	<string name="_write_page_data">WritePage</string>
	<string name="connect">connect MCU</string>
	<string name="inventory">Start Inventory</string>
		<string name="stop_inventory">Stop Inventory</string>
	<string name="export">Export</string>
	<string name="export_success">Export Success</string>
	<string name="export_msg">Please Inventory</string>
	<string name="membank">Membank</string>
	<string name="accesspassword">Access Password</string>
	<string name="addr">Address(word)</string>
	<string name="len">Length(word)</string>
	<string name="read">Read Tag</string>
	<string name="write">Write Tag</string>
	<string name="writedata">Write Data(HEX)</string>
	<string name="locktype">Lock Type</string>
	<string name="locktag">Lock Tag</string>
	<string name="kill">Kill Tag</string>
	<string name="killpassword">Kill Password</string>
	<string name="readdata">Read Data</string>
	<string name="back">Back</string>
	<string name="parameterSetting">Parameter Setting</string>
	<string name="sensitivity">Sensitivity</string>
	<string name="rfPower">RF power</string>
	<string name="workArea">Work Area</string>
    <string name="freqSetting">Freq setting</string>
    <string name="china2Freq">China2：920125kHz~924875kHz</string>
    <string name="usaFreq">USA：902250kHz~927750kHz</string>
    <string name="euFreq">Europe：865100kHz~867900kHz</string>
    <string name="china1Freq">China1：840125kHz~844875kHz</string>
    <string name="koreaFreq">Korea：917700kHz~923300kHz</string>
    <string name="setSuccess">Set success</string>
    <string name="freqNotNull">Frequency not null</string>
    <string name="epc">EPC</string>
    <string name="desc">display</string>
    <string name="manufacturer">Manufacturer： </string>
	<string name="productModel">Model：</string>
	<string name="SWVersion">Version：</string>
	<string name="DeviceAddress">Device Addr：</string>
	<string name="FingerNum">Finger Num：</string>
	<string name="SecurLevel">Secur Level：</string>
	<string name="CmosExposeTimer">CMO：</string>
	<string name="DetectSensitive">Sensitiv：</string>
	<string name="ComBaudRate">BaudRate：</string>
    <string name="clear_mark">clear mark</string>
    <string name="reset_setting">Reset setting</string>
    <string name="reset_device">Reset device</string>
    <string name="compare_text">Compare</string>
    <string name="spinnerPrompt">Prompt</string>
    <string name="image_preview">Image preview</string>
    <string name="single_compare">Single compare</string>
    <string name="single_search">Single search</string>
    <string name="search_fp">Search</string>
    <string name="db_clear">Empty storage</string>
    <string name="db_delete">delete</string>
    <string name="database_manage_text">database manage</string>
    <string name="finger_input_text">Finger input</string>
    <string name="image_upload">Image upload</string>
    <string name="input_finger">Input finger</string>
    <string name="register_finger">Register</string>
    <string name="image_manage_text">Image manage</string>
    <string name="origin_image">Origin image</string>
    <string name="get_iamge">Get image</string>
    <string name="yulan_tuxiang">view image</string>
    <string name="baocun_tuxiang">Save image</string>
    <string name="muban_caozuo_text">Templet option</string>
    <string name="shengcheng_muban">Gen templet</string>
    <string name="bidui_muban">compare templet</string>
    <string name="shangchuan_muban">Upload templet</string>
    <string name="xiazai_muban">Download templet</string>
    <string name="anquan_shezhi_text">Set secur level</string>
    <string name="anquan_shezhi">Set</string>
    <string name="zhiwen_anquan_jibie_text">Secur level </string>
    <string name="cmos_shezhi_text">CMOS</string>
    <string name="cmos_shezhi">Set</string>
    <string name="baoguang_shijian_text">time(hex)</string>
    <string name="baoguang_shijian_default">00f8</string>
    <string name="zhiwen_lingmindu_text">sensetive</string>
    <string name="zhiwen_lingmindu_default">85</string>
    <string name="jishiben_caozuo_text">Notepad option</string>
    <string name="du_jishiben">Read notepad</string>
    <string name="xie_jishiben">Write notepad</string>
    <string name="botelv_shezhi_text">Baudrate setting</string>
    <string name="botelv_shezhi">set</string>
    <string name="botelv_shezhi_default">115200</string>
    <string name="qita_caozuo_text">Other</string>
    <string name="shebei_xinxi_text">device info</string>
    <string name="zhengshiyong_usb">Now using USB </string>
    <string name="zhengshiyong_serial">Now using serialport </string>
    <string name="usb_shuchu_text">image input success</string>
    <string name="dakai_shebei">Open device</string>
    <string name="guanbi_shebei">Close device</string>
    <string name="cancel_operation">Cancel operation</string>
    <string name="tuichu_chengxu">Exit</string>
    <string name="tezheng_bidui_android">Compare featrue</string>
    <string name="baobiao_shengcheng_android">Gen table</string>
    <string name="usb_communication_type">USB</string>
    <string name="com_communication_type">SerialPort</string>
    <string name="image_type">image</string>
    <string name="alg_type">algorithm</string>
    <string name="start"> start </string>
    <string name="put_finger_on_sensor">Please put the finger on the sensor first!</string>
    <string name="get_finger_print_success">get finger print success!</string>
    <string name="option_cancel"> option cancel</string>
    <string name="device_exception">device exception</string>
    <string name="now_upload_image">Now upload image...</string>
    <string name="call_fail">call fail</string>
    <string name="input_image_success">Input image success, now upload...</string>
    <string name="upload_image_error">upload image error!</string>
    <string name="upload_image_success"> upload image success</string>
    <string name="gen_feature">gen feature</string>
    <string name="gen_feature_fail_input_again">gen feature fail,please input again</string>
    <string name="please_move_finger">please move finger</string>
    <string name="merger_fail">merger fail</string>
    <string name="finger_print_repeat_input_cacel">finger print repeat, input cancel</string>
    <string name="user">user </string>
    <string name="add_success">add success</string>
    <string name="input_image_success_comparing">input image success, comparing...</string>
    <string name="gen_feature_fail">gen feature fail</string>
    <string name="compare_fail">compare fail</string>
    <string name="card_id">UID</string>
    <string name="get_UID">Get UID</string>
    <string name="authentication">Authentication</string>
</resources>