<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText_15693_data"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:editable="false"
        android:maxLines="6"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uid"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_15693_uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- <CheckBox
            android:id="@+id/checkBox_security"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_byte"
            android:textSize="18sp" /> -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FLAGS:"
            />

        <EditText
            android:id="@+id/editText_15693_flags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:text="00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_block"
            />

        <EditText
            android:id="@+id/editText_15693_start_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:text="00" />

        <TextView
           
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/block_amount" />

        <EditText
            android:id="@+id/editText_15693_block_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:text="01" />
    </LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView 
        android:id="@+id/textView_15693_write_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_data"/>
    <EditText 
        android:id="@+id/editText_15693_write_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="01010101"/>
</LinearLayout>
 <View 
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="#000000"/>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
   
   <!--  <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="卡状态设置："/> -->
    <CheckBox 
        android:id="@+id/checkBox_card_state_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/card_state_set"/>
    <!-- <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="卡写入设置："/> -->
    <CheckBox 
        android:id="@+id/checkBox_card_write_mode_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/card_write_mode_set"/>
    <!-- <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="卡锁定设置："/> -->
    <CheckBox 
        android:id="@+id/checkBox_card_lock_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/card_lock_set"/>
    
</LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <CheckBox 
        android:id="@+id/checkBox_stay_quiet_Block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="StayQuiet"/>
     <CheckBox 
        android:id="@+id/checkBox_select_AFI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select"/>
      <CheckBox 
        android:id="@+id/checkBox_return_ready_DSFID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ready"/>
    <Button 
        android:id="@+id/button_15693_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set"/>
</LinearLayout>

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
            android:id="@+id/button_find_15693"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/findcard" />

        <Button
            android:id="@+id/button_read_15693"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/read_data_button" />

        <Button
            android:id="@+id/button_write_15693"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/write_data_button" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        
        <Button 
            android:id="@+id/button_get_system_information"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/read_card_information"/>

        <Button
            android:id="@+id/button_clear_15693"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/clear" />
    </LinearLayout>

</LinearLayout>
